# sandbox

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.txt
scripts/: 2022-11-12_excel-reformat.py  2023-06-07_youtube-downloader.py  2023-12-14_portfolio-optimisation.py  2024-01-23_debug-env.py  2024-04-10_raindrop-api.py  2024-04-11_spotify-api.py  2024-06-17_yahoo-finance.py  2024-08-19_ms-outlook.py  2024-08-21_sqlite-vec.py  2024-10-05_audio-parser.py  2024-10-25_embeddings.py  2024-11-18_text-to-sql.py  2024-12-01_datasette.py  2025-01-10_github-stars.py  2025-02-14_do-object-storage.py  2025-05-10-resend-email.py  2025-05-29_mnist-lol.py  2025-07-10_summarizer.py  2025-10-21_manim.py  2025_01_10-github-stars.py  2025_02_14-do-object-storage.py  2025_06_23-sql-server-blob.py
scripts/2023-06-07_youtube-downloader/: main.py
scripts/2023-06-16_zarusd/: main.py
scripts/2023-07-15_sqlalchemy-syntax/: main.py
scripts/2023-12-14_portfolio-optimisation/: main.py
scripts/2024-01-23_debug-env/: main.py
scripts/2024-04-10_raindrop-api/: main.py
scripts/2024-04-11_spotify-api/: main.py
scripts/2024-06-17_yahoo-finance/: main.py
scripts/2024-08-19_ms-outlook/: main.py
scripts/2024-08-21_sqlite-vec/: main.py
scripts/2024-10-01_rss-parser/: main.py
scripts/2024-10-05_audio-parser/: main.py
scripts/2024-10-25_embeddings/: main.py
scripts/2024-11-18_text-to-sql/: main.py
scripts/2024-11-27_llm-images/: README.md  chats.py  main.py
