[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for random code and thoughts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pyodbc>=5.2.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "tensorflow>=2.19.0",
    "tiktoken>=0.9.0",
]

[tool.ruff]
line-length = 100
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
