[project]
name = "sandbox"
version = "0.1.0"
description = "Sandbox for random code and thoughts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dspy>=2.6.27",
    "instructor>=1.9.2",
    "keras>=3.10.0",
    "manim>=0.19.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "openai>=1.82.1",
    "pandas>=2.2.3",
    "pydantic>=2.11.5",
    "pyodbc>=5.2.0",
    "python-certifi-win32>=1.6.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.41",
    "tensorflow>=2.19.0",
    "tiktoken>=0.9.0",
    "wandb>=0.21.0",
    "weave>=0.51.55",
]

[tool.ruff]
line-length = 100
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
